# DSA

./: README.md
Lab1/hazi/: CMakeLists.txt  main.c
Lab1/hazi/headers/: functions.h
Lab1/hazi/sources/: functions.c
Lab10/BinarisFa/: CMakeLists.txt  binaris_fa.c  binaris_fa.h  constants.h  main.c
Lab10/Binaris_Kereso_Fa/: CMakeLists.txt  binary_search_tree.c  binary_search_tree.h  constants.h  main.c
Lab10/Bst_Person/: CMakeLists.txt  constants.h  main.c  person.c  person.h
Lab2/feladatok1/: CMakeLists.txt  functions.c  functions.h  main.c
Lab2/feladatokmatrix/: CMakeLists.txt  constants.h  functions.c  functions.h  main.c
Lab3/Students/: CMakeLists.txt  constants.h  main.c  student.c  student.h  students.c  students.h
Lab3/Students2/: CMakeLists.txt  constants.h  main.c  student2.c  student2.h
Lab3/teszt/: CMakeLists.txt
Lab4/Array/: CMakeLists.txt  array.c  array.h  constants.h  main.c
Lab5/Queue/: CMakeLists.txt  constants.h  main.c  queue.c  queue.h
Lab5/Stack/: CMakeLists.txt  constants.h  functions.c  functions.h  main.c
Lab6/Mintatetel/: CMakeLists.txt  main.c  patient.c  patient.h
Lab8/Node/: CMakeLists.txt  Node.c  Node.h  constants.h  main.c
Parcialis/Dcsoport/: Book.c  Book.h  CMakeLists.txt  main.c
